--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             NZCH: { lat: -43.487, lon: 172.531 },
             NZDN: { lat: -45.908, lon: 170.199 },
             NZGS: { lat: -38.667, lon: 177.982 },
-            NZNR: { lat: -39.466, lon: 176.871 }, 
+            NZNR: { lat: -39.466, lon: 176.871 },
+            NZWR: { lat: -35.769, lon: 174.363 },
             NZMF: { lat: -44.672, lon: 167.925 }, 
             NZHK: { lat: -42.713, lon: 170.984 },
             NZHN: { lat: -37.865, lon: 175.336 },
