--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <!-- Link to your custom style.css -->
     <link rel="stylesheet" href="backup.css">
 
-    <link rel="icon" type="image/png" href="https://img.icons8.com/?size=100&id=19436&format=png&color=000000">
+    <link rel="icon" type="image/png" href="https://img.icons8.com/?size=100&id=soxADT6b3GPK&format=png&color=000000">
+
+    <link rel="apple-touch-icon" href="https://img.icons8.com/?size=100&id=soxADT6b3GPK&format=png&color=000000">
 </head>
 
 <body>
